--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
     package="com.example.miles.arseethroughcalibration"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:installLocation="preferExternal">
 
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -17,7 +18,7 @@
     <uses-feature
         android:name="android.hardware.camera.autofocus"
         android:required="false"/>
-    <uses-feature android:glEsVersion="0x00010100"/>
+    <uses-feature android:glEsVersion="0x00010000"/>
 
     <application
         android:name=".ARSimpleApplication"
